# SmartWaterSystem

./: .gitignore  pyproject.toml  requirements.txt
api/: jwt.py  serializers.py  swagger.py  urls.py  views.py
app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_deviceinfo_imei.py  0003_deviceinfo_is_drinkable.py
app/static/html/: index.html  tables-basic.html
auth/: forms.py  urls.py  views.py
config/: settings.py  urls.py
templates/app/: aside.html  auth-login-basic.html  base.html  cities.html  consumptions-detail.html  devices.html  footer.html  head.html  index.html  main.html  navbar.html  pages-misc-error.html  scripts.html  tables-basic.html  ui-pagination-breadcrumbs.html  users.html
utils/: data.json  data.xlsx
